<resources>
    <string name="app_name">META_DAY-app</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="textCadastro">Cadastro</string>
    <string name="Perfil">Perfil</string>
    <string name="InfoPessoais">Informações Pessoais</string>
    <string name="sairConta">Sair da minha conta</string>
    <string name="editar">Editar</string>
    <string name="simpleName">Luiz Fernando</string>
    <string name="EditarConta">Editar Conta</string>
    <string name="salvar">Salvar</string>
    <string name="logarGoogle">Entrar com o Google</string>
    <string name="logarEmail">Entrar com E-mail</string>
    <string name="criarConta">Criar conta</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="esqueciSenha">Esqueci minha senha</string>
    <string name="confirmarEmail">Confirmar e-mail</string>
    <string name="enviar">Enviar</string>




</resources>