<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".telaLoginEmail">

  <EditText
      android:id="@+id/editTextTextEmailAddress"
      android:layout_width="334dp"
      android:layout_height="44dp"
      android:layout_marginTop="296dp"
      android:layout_marginBottom="54dp"
      android:background="@drawable/borda"
      android:ems="10"
      android:gravity="center"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:textColorHint="@color/white"
      app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editTextTextPassword"
      android:layout_width="334dp"
      android:layout_height="44dp"
      android:layout_marginStart="39dp"
      android:layout_marginEnd="39dp"
      android:layout_marginBottom="81dp"
      android:background="@drawable/borda"
      android:ems="10"
      android:gravity="center"
      android:hint="@string/senha"
      android:inputType="textPassword"
      android:textColorHint="@color/white"
      app:layout_constraintBottom_toTopOf="@+id/btEntrar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

  <Button
      android:id="@+id/btEntrar"
      android:layout_width="159dp"
      android:layout_height="44dp"
      android:layout_marginBottom="191dp"
      android:backgroundTint="@color/verdeBT"
      android:text="@string/entrar"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>