<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".recuperarSenha">

    <Button
        android:id="@+id/btRecEmail"
        android:layout_width="159dp"
        android:layout_height="44dp"
        android:layout_marginBottom="189dp"
        android:backgroundTint="@color/verdeBT"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recEmailconfirm" />

    <EditText
        android:id="@+id/recEmail"
        android:layout_width="334dp"
        android:layout_height="44dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/borda"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/recEmailconfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/recEmailconfirm"
        android:layout_width="334dp"
        android:layout_height="44dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="83dp"
        android:background="@drawable/borda"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confirmarEmail"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btRecEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>